src/pages/global.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap");

html,
body {
  color: #2a2a2a;
  font-size: 18px;
  line-height: 1.45;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  box-sizing: border-box;
  height: 100%;
  font-family: "Montserrat", sans-serif;
}

*,
*:before,
*:after {
  box-sizing: inherit;
  margin: 0;
}

body {
  margin: 0;
}

a {
  text-decoration: none;
}

#___gatsby,
#gatsby-focus-wrapper,
#gatsby-focus-wrapper > div {
  display: flex;
  flex-flow: column;
  height: 100%;
}

.flex {
  display: flex;
}

.flex-space-between {
  justify-content: space-between;
}

.full-width {
  width: 100%;
}

.full-height {
  height: 100%;
}

